lb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
spec:
  selector:
    app: my-react-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  externalIPs:
    - 10.178.0.17
  type: LoadBalancer
