ingress-test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /devracoon/*
        backend:
          serviceName: my-react-app-service
          servicePort: 8080
